# cpp_lowlatency_queue

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/llq/: AlignedAllocator.h  BinaryUtils.h  CompilerAbstractions.h  LowLatencyQueue.h
test/: CMakeLists.txt  test_binary_utils.cpp  test_lowlatencyqueue.cpp
